...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Details Marks" id="3Jc-Ek-lFn">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="U0y-PY-aIS">
                            <connections>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="List of Marks" id="SnG-wL-snZ">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="IMS-bz-98V">
                            <connections>
...
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Subject for the mark" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7j6-cC-MSm">
                                <accessibility key="accessibilityConfiguration" identifier="markAdd-subj-txt"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mark value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SDm-xG-vNV">
                                <accessibility key="accessibilityConfiguration" identifier="markAdd-val-txt"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Coefficient of the mark" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zcP-RN-JGg">
                                <accessibility key="accessibilityConfiguration" identifier="markAdd-coef-txt"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Test name fot he mark" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bMZ-SB-UWT">
                                <accessibility key="accessibilityConfiguration" identifier="markAdd-testName-txt"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Add Mark" id="BnV-IV-e1c">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Y2e-nv-eLc">
                            <connections>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2cy-LW-ajX" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Detailed Report" image="Bookmark_50" id="l8w-Zk-U8Y"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BDA-mM-UdD">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="y9D-ch-3VP" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="List of marks" image="Menu_50" id="ma7-o8-yca"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SJw-Zg-WkJ">
...
